# GreenHouse

./: README.md
Chris/: Proyecto.docx
Chris/Esquema circuito/: Esquema circuito.kicad_prl  Esquema circuito.kicad_pro  Esquema circuito.kicad_sch  Esquemas_per.bak  Esquemas_per.kicad_sym  sym-lib-table
Chris/Proyecto/: Proyecto.ino
docs/: README.md  index.html
docs/css/: styles.css
docs/js/: script.js
src/: User_Setup.h
src/app/: README.md  api.ts  api_simulator.py  capacitor.config.ts  package.json  pyproject.toml
src/app/android/app/: build.gradle
src/app/android/app/src/main/: AndroidManifest.xml
src/app/android/app/src/main/java/dev/skellent/greenhouse/: MainActivity.java
src/app/android/app/src/main/res/values/: strings.xml
src/app/src/: main.py
src/design/: GUI.md
src/esp32/mergeTest/: mergeTest.ino
src/esp32/screenTest/: screenTest.ino
src/esp32/webserverTest/: webserverTest.ino
src/main/: .gitignore  CONFIG.cpp  CONFIG_example.h  GUI.cpp  GUI.h  MONITOR.cpp  MONITOR.h  main.ino  skells_model.h
src/red/: main.ipynb  pyproject.toml  red.ino  skells_greenhouse.tflite  skells_greenhouse_dataset.csv  skells_greenhouse_model.keras
src/red/.ipynb_checkpoints/: main-checkpoint.ipynb
